<resources>
    <string name="app_name">PartyCalculator</string>
    <string name="enter_your_name">Enter party name</string>
    <string name="continueActivity">Continue</string>
    <string name="list">List of my parties</string>
    <string name="create_party">Create party</string>
    <string name="exit">Exit</string>
    <string name="title_activity_create_party">CreatePartyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- messages -->
    <string name="party_cannot_empty">Party name could not be empty</string>
    <string name="party_name_length">Party length should not be more than 20 characters</string>
    <string name="title_activity_party_list">PartyListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="debt">Debt</string>
    <string name="items">Items</string>
    <string name="people">People</string>
    <string name="add_person">Add Person</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="show_deleted_parties">Show Deleted Parties</string>
    <string name="show_active_parties">Show Active Parties</string>
    <string name="show_all_parties">Show All Parties</string>
    <string name="add_item">Add Item</string>
    <string name="paid">Paid</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="deselect_all">Deselect All</string>
    <string name="select_all">Select All</string>
    <string name="number_of_people">Number of People</string>
    <string name="fullprice">FullPrice</string>
    <string name="add">Add</string>
    <string name="simple_view">Simple view</string>
    <string name="simplest_view">Simplest view</string>
    <string name="debtor">Debtor</string>
    <string name="action">Action</string>
    <string name="creditor">Creditor</string>
</resources>